--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
+boto3==1.9.169
+botocore==1.12.169
+colorama==0.3.9
 dj-database-url==0.5.0
 Django==2.2.2
+docutils==0.14
 gunicorn==19.9.0
+jmespath==0.9.4
 psycopg2==2.8.3
+pyasn1==0.4.5
+python-dateutil==2.8.0
 pytz==2019.1
+PyYAML==5.1
+rsa==3.4.2
+s3transfer==0.2.1
+six==1.12.0
 sqlparse==0.3.0
+urllib3==1.25.3
 whitenoise==4.1.2
