--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ botocore==1.12.169
 celery==4.3.0
 colorama==0.3.9
 dj-database-url==0.5.0
-Django==2.2.2
+django>=2.2.4
 django-celery-results==1.1.2
 docutils==0.14
 gunicorn==19.9.0
